--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "chart.js": "^4.4.7",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
+    "react-google-charts": "^5.2.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
     "tailwindcss": "^3.4.17"
